# ChatAny

./: .eslintrc.js  .gitignore  .prettierrc  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/bot/: BotDialog.vue
src/components/chat/: ChatHistory.vue  ChatInput.vue  ChatSettings.vue  ChatWindowHeader.vue  DeleteSessionAlert.vue  MessageItem.vue  MessageList.vue  SessionGroup.vue  SessionSelector.vue
src/components/common/: MarkdownViewer.vue  ModelSelector.vue  TypewriterText.vue
src/components/setting-dialog/: index.vue
src/components/setting-dialog/components/: about.vue  common.vue  log.vue  model.vue  sidebar.vue
src/components/sidebar/: index.vue
src/components/ui/command/: Command.vue  CommandEmpty.vue  CommandGroup.vue  CommandInput.vue  CommandItem.vue  (+3 more)
src/core/: chat.ts  services.ts
src/db/: bots.ts  index.ts
src/directives/: click-outside.ts
src/hook/: useLightDarkSwitch.ts  useStore.ts
src/lib/: utils.ts
src/pages/: index.ts  yyy.vue
src/pages/bot/: UsageChart.vue  index.vue
src/pages/chat/: ChatList.vue  ChatSidebar.vue  ChatWindow.vue  MessageItem.vue  ModelSelectionModal.vue  NewChatModal.vue  TypewriterText.vue  index.vue  types.ts
src/router/: index.ts
src/store/: bot.ts  chat.ts  common.ts  model.ts  usage.ts
src/types/: index.d.ts  index.ts
src/utils/: markdownRenderer.ts  time.ts
(+13 files in other folders)
